@@ -117,7 +117,7 @@
 
             <div id="fieldWidgets">
                 <!-- List of Fields, followed by the list of Adapters -->
-                <h2 i18n:translate="Fields/Folders" class="fields-header">Fields/Folders</h2>
+                <h2 i18n:translate="Fields" class="fields-header">Fields</h2>
                 <tal:typelist repeat="item view/addablePrioritizedFields">
                     <tal:block tal:define="set item/id">
                         <div class="widget w-field" tal:attributes="id item/id">
@@ -126,7 +126,23 @@
                             </div>
                         </div>
                         <div class="tooltip">
-                              <span tal:replace="item/description">Type description</span>
+                          <span tal:replace="item/description">Type description</span>
+                        </div>
+                    </tal:block>
+                </tal:typelist>
+            </div>
+            <hr>
+            <div id="fieldsetWidgets" tal:define="items view/addableFieldsets">
+                <h2 i18n:translate="Fieldsets" class="fieldset-header">Fieldsets</h2>
+                <tal:typelist repeat="item items">
+                    <tal:block tal:define="set item/id">
+                        <div class="widget w-fieldset" tal:attributes="id item/id">
+                            <h4 class="widget-header" tal:content="item/title">Type title</h4>
+                            <div class="widget-inside">
+                            </div>
+                        </div>
+                        <div class="tooltip">
+                          <span tal:replace="item/description">Type description</span>
                         </div>
                     </tal:block>
                 </tal:typelist>
@@ -143,7 +159,7 @@
                        </div>
                     </div>
                     <div class="tooltip">
-                          <span tal:replace="python:desc or 'No description'">Type description</span>
+                      <span tal:replace="python:desc or 'No description'">Type description</span>
                     </div>
                 </tal:block>
                 </tal:typelist>
