@@ -4,6 +4,9 @@ Change History
 1.7b4 unreleased
 ----------------
 
+- Move fieldset markers into a separate part of quickedit toolbox.
+  [smcmahon]
+
 - Fix popen2 deprecation warning by using subprocess
   [toutpt]
 
